# romf

./: .gitignore  Cargo.toml  Dockerfile  README.md  blacklist.txt  build_docker.sh
frontend/: .gitignore  README.md  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: captcha.vue
frontend/src/plugins/: toaster.js
frontend/src/views/: home.vue
src/: blacklist.rs  main.rs
