[package]
name = "romf"
version = "0.2.0"
authors = ["David Hedgren <david@hedgren.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.7.3"

async-std = {version = "1", features = ["attributes"]}
tide = "0.10.0"
multipart = "0.16.1"
urlencoding = "1.0"
